@@ -85,6 +85,8 @@ followed by 0.6.3.
 
   1. Update the /WEB-INF/classes/jamwiki.properties file by changing the
      "wiki-version" property to "1.1.1".
+  2. The applicationContext-security.xml file has been modified to add a
+     logout success handler.
 
 
   JAMWiki 1.1.0
